2.4.28
- Allow level default trait config

2.4.27
- Fix a rare shulker trait crash
- Fix lv.0 traits generated

2.4.26
- Fix Master Trait crash
- Pulling and Repelling won't move spectator
- Gravity grounds attack on hurt

2.4.25
- Fix Master summoned minions fight each other
- Traits won't show stat bonus if it's 0

2.4.24
- Fix distance difficulty factor over 40k blocks
- Add master trait, default on Ignis and Ancient Remnant
- Orb usable only when having glasses and detector
- Add drops to Arena and Master trait
- Add Mowzie's mobs compatibility
- Add command to set level, set trait, remove trait, and clear all traits
- Add config for max mob level
- Add datapack config entry for mob-specific max level ("maxLevel in entity config")
- Add methods for KubeJS to get and set hostility data

2.4.23
- Hostility Beacon render fix
- Fix Trait Generation
- Gateways compat for Split and Growth

2.4.22
- Hostility Beacon
- Mutant Monster compat
- GeckoLib invisiblity glowing fix
- Gateway to Eternity config support
- Allow banning mob spawn that is lower than certain level
- minor performance improvement

2.4.21
- Add armor spawn config datapack
- Add config for trident spawn on drowned
- Add config for spawner spawned hostility loot drop rate
- Improve client side performance
- Attempt to fix a rare unreproducible crash

2.4.20
- Allow mobs with Arena to attack other mobs with Arena
- Make additional player difficulty an attribute

2.4.19
- Make Reflect trait reflect only forge:direct damage
- Make Arena not blocked by reflection ring and abrahadabra
- Make Shulker only shoot bullet after first one disappears
- Make Hostility Spawner can only spawn mobs with level
- Add Abyssal Thorn, Divine Cross, and Divine Light
- Allow visualization of cleared levels
- Allow mob-specific level config to add condition and chance to traits
- Limit Teleport trait active teleport distance
- Change Level Difficulty from using DimensionType ID to Level ID

2.4.18