@@ -27,3 +27,4 @@ build
 run
 
 .DS_Store
+secrets.properties
