@@ -1,3 +1,5 @@
+import net.darkhax.curseforgegradle.TaskPublishCurseForge
+
 buildscript {
     repositories {
         maven { url = 'https://maven.minecraftforge.net' }
@@ -12,6 +14,9 @@ buildscript {
 
 plugins {
     id 'net.minecraftforge.gradle' version '[6.0,6.2)'
+    id 'net.darkhax.curseforgegradle' version '[1.1.24,)'
+    id "at.stnwtr.gradle-secrets-plugin" version "1.0.1"
+    id "com.modrinth.minotaur" version "2.+"
 }
 
 apply plugin: 'maven-publish'
@@ -241,4 +246,42 @@ dependencies {
     //runtimeOnly fg.deobf("curse.maven:lightmans-currency-472521:4813507")
     //runtimeOnly fg.deobf("curse.maven:mouse-tweaks-60089:4581240")
 
+}
+
+tasks.register('publishCurseForge', TaskPublishCurseForge) {
+    apiToken = secrets.get("curseforge_token")
+    def mainFile = upload(project.curseforge_project, new File("./build/libs/${modid}-${ll_version}.jar"))
+    mainFile.changelog = new File('./changelog.txt')
+    mainFile.addEnvironment("Client", "Server")
+    mainFile.addGameVersion("1.20.1")
+    mainFile.addModLoader("Forge","NeoForge")
+    mainFile.addRequirement("l2-complements", "l2library")
+    mainFile.addOptional("the-twilight-forest", "ice-and-fire-dragons", "aerial-hell", "the-undergarden",
+            "modulargolems", "ars-nouveau", "passive-skill-tree",
+            "better-combat-by-daedelus", "just-enough-effect-descriptions-jeed")
+    mainFile.releaseType = "release"
+    disableVersionDetection()
+}
+
+modrinth {
+    token = secrets.get("modrinth_token")
+    projectId = project.modrinth_project
+    versionName = "L2Hostility ${project.ll_version}"
+    versionNumber = project.ll_version
+    versionType = "release"
+    uploadFile = new File("./build/libs/${modid}-${ll_version}.jar")
+    gameVersions = ["1.20.1"]
+    loaders = ["forge", "neoforge"]
+    changelog = new File('./changelog.txt').text.split("\n\n")[0]
+    dependencies {
+        required.project "l2library"
+        required.project "l2-complements"
+        optional.project "better-combat"
+        optional.project "just-enough-effect-descriptions-jeed"
+        optional.project "the-undergarden"
+        optional.project "ice-and-fire-dragons"
+        optional.project "ars-nouveau"
+        optional.project "modular-golems"
+        optional.project "aerial-hell"
+    }
 }
