@@ -2,6 +2,7 @@ package dev.xkmc.l2hostility.content.item.curio.ring;
 
 import dev.xkmc.l2complements.content.item.curios.CurioItem;
 import dev.xkmc.l2complements.init.registrate.LCEffects;
+import dev.xkmc.l2hostility.content.item.curio.core.SingletonItem;
 import dev.xkmc.l2hostility.init.data.LangData;
 import dev.xkmc.l2library.base.effects.EffectUtil;
 import net.minecraft.ChatFormatting;
@@ -17,7 +18,7 @@ import top.theillusivec4.curios.api.type.capability.ICurioItem;
 
 import java.util.List;
 
-public class RingOfDivinity extends CurioItem implements ICurioItem {
+public class RingOfDivinity extends SingletonItem {
 
 	public RingOfDivinity(Properties properties) {
 		super(properties);
