@@ -1,7 +1,7 @@
 package dev.xkmc.l2hostility.content.item.curio.ring;
 
-import dev.xkmc.l2complements.content.item.curios.CurioItem;
 import dev.xkmc.l2complements.init.registrate.LCEffects;
+import dev.xkmc.l2hostility.content.item.curio.core.SingletonItem;
 import dev.xkmc.l2hostility.init.data.LangData;
 import dev.xkmc.l2library.base.effects.EffectUtil;
 import net.minecraft.ChatFormatting;
@@ -15,11 +15,10 @@ import net.minecraft.world.level.entity.EntityTypeTest;
 import net.minecraftforge.common.ForgeMod;
 import org.jetbrains.annotations.Nullable;
 import top.theillusivec4.curios.api.SlotContext;
-import top.theillusivec4.curios.api.type.capability.ICurioItem;
 
 import java.util.List;
 
-public class RingOfIncarceration extends CurioItem implements ICurioItem {
+public class RingOfIncarceration extends SingletonItem {
 
 	public RingOfIncarceration(Properties properties) {
 		super(properties);
